<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SUN App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="SUN">SUN</string>
    <string name="S.U.N">S.U.N</string>
    <string name="welcome">Welcome</string>
    <string name="email">E-mail:</string>
    <string name="password">password</string>
    <string name="Password2">password:</string>
    <string name="emailInput">Enter e-mail address</string>
    <string name="login">login</string>
    <string name="signUp">sign up</string>
    <string name="title_activity_activity2">Activity2</string>
    <string name="name">name:</string>
    <string name="surname">surname:</string>
    <string name="nameHint">enter name</string>
    <string name="surnameHint">enter surname</string>
    <string name="title_activity_activity3">Activity3</string>
    <string name="SignUp">sign up</string>
    <string name="Login">login</string>
    <string name="Logın">login</string>
    <string name="SıgnUp">sign up</string>
    <string name="frıends">friends</string>
    <string name="notıfıcatıons">notifications</string>
    <string name="namesurname">\"same surname\"</string>
    <string name="myevents">own events</string>
    <string name="interests">interests</string>
    <string name="joınedevents">joined events</string>
    <string name="futureevents">future events</string>
    <string name="contactınfo">contact info</string>
    <string name="title_activity_activity4">activity4</string>
    <string name="title_activity_activity5">Activity5</string>
    <string name="title_activity_activity6">Activity6</string>
    <string name="title_activity_activity7">Activity7</string>
    <string name="title_activity_activity8">Activity8</string>
    <string name="myEvents">Own Events</string>
    <string name="event">Event</string>
    <string name="createEvent">create event</string>
    <string name="addIntrest">add interest</string>
    <string name="interest">Interest</string>
    <string name="Interests">Interests</string>
    <string name="pastEvents">Past Events</string>
    <string name="planned_events">planned events</string>
    <string name="join_an_event">join an event</string>
    <string name="contact_info">contact info</string>
    <string name="phone">Phone:</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="events">events</string>
    <string name="findFriends">find friends</string>
    <string name="bump">bump!</string>
    <string name="newsFeed">news feed</string>
    <string name="title_activity_find_friends_page">findFriendsPage</string>
    <string name="foundFriends">friend10</string>
    <string name="title_activity_friend_list_page">FriendListPage</string>
    <string name="title_activity_event_detail_page">EventDetailPage</string>
    <string name="title_activity_create_event_page">CreateEventPage</string>
    <string name="title_activity_bump">BumpActivity</string>
    <string name="title_activity_interest_detail_page">InterestDetailPage</string>
    <string name="title_activity_leader_board">LeaderBoardActivity</string>

</resources>
