<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.basri.sunapp.Activity5"
    android:background="@drawable/background"
    android:id="@+id/interest_layout">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frıends"
        android:id="@+id/button20"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ffffffff"
        android:onClick="showFriends" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="&quot; &quot; points"
        android:id="@+id/points"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/button20"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/avatar"
        android:layout_below="@+id/points"
        android:layout_above="@+id/name"
        android:src="@drawable/profile"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/namesurname"
        android:id="@+id/name"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addIntrest"
        android:id="@+id/add_interest_button"
        android:background="#ffffffff"
        android:layout_above="@+id/points"
        android:layout_toRightOf="@+id/textView23"
        android:layout_toEndOf="@+id/textView23"
        android:onClick="showAddInterest" />
    //
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Interests"
        android:id="@+id/textView23"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#ff007c12"
        android:textIsSelectable="false"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/textView23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView21"
        android:background="@drawable/line"
        android:layout_below="@+id/imageView21"
        android:layout_alignRight="@+id/listView"
        android:layout_alignEnd="@+id/listView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:id="@+id/imageView21"
        android:background="@drawable/line2"
        android:layout_alignTop="@+id/button20"
        android:layout_toRightOf="@+id/button20"
        android:layout_toEndOf="@+id/button20" />
</RelativeLayout>
