<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/background"
    android:id="@+id/login"
    android:orientation="vertical"
    android:weightSum="1">
    //

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/line"
        android:layout_marginTop="50dp" />

    <ImageView
        android:layout_width="535dp"
        android:layout_height="124dp"
        android:id="@+id/imageView2"
        android:layout_alignBottom="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/sun" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="username"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#ff000000"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:typeface="sans" />

    <EditText
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/login_email"
        android:background="@drawable/entry"
        android:hint="@string/emailInput"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignStart="@+id/login_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:paddingLeft="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Password2"
        android:id="@+id/textView4"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#ff000000"
        android:layout_below="@+id/login_email"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password"
        android:background="@drawable/entry"
        android:hint="Enter password"
        android:layout_below="@+id/textView4"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_marginTop="1dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="40dp" />

    <Button
        android:layout_width="111dp"
        android:layout_height="31dp"
        android:text="@string/Login"
        android:id="@+id/button"
        android:layout_below="@+id/login_password"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_marginTop="2dp"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:background="@drawable/button1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SıgnUp"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignRight="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_marginTop="2dp"
        android:layout_gravity="right"
        android:layout_marginRight="45dp"
        android:background="#00ffffff" />

</LinearLayout>
