<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.basri.sunapp.Activity7"
    android:background="@drawable/background">

    <Button
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/frıends"
        android:id="@+id/button23"
        android:background="#ffffffff"
        android:layout_above="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="showFriends" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="&quot; &quot; points"
        android:id="@+id/events_points"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_below="@+id/button24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
    //
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/events_avatar"
        android:layout_below="@+id/events_points"
        android:layout_above="@+id/events_name"
        android:src="@drawable/profile"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/namesurname"
        android:id="@+id/events_name"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/planned_events"
        android:id="@+id/textView34"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#ff007c12"
        android:textIsSelectable="false"
        android:layout_below="@+id/events_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="join"
        android:id="@+id/button24"
        android:background="#ffffffff"
        android:layout_above="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView14"
        android:layout_toEndOf="@+id/imageView14"
        android:visibility="gone" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/events_list"
        android:layout_below="@+id/textView34"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:background="@drawable/line"
        android:layout_below="@+id/imageView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/imageView14"
        android:background="@drawable/line2"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/button23"
        android:layout_toEndOf="@+id/button23"
        android:layout_marginBottom="2dp" />
</RelativeLayout>
